chaos-node-micro/deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: node-micro
  namespace: default
spec:
  replicas: 1
  template:
    metadata:
      labels:
        name: node-micro
    spec:
      containers:
      - name: node-micro
        image: codeurjc/node-micro
        imagePullPolicy: Always
        ports:
        - containerPort: 3000
