chaos-node-micro/kube-chaos.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: kubernetes-pod-chaos-monkey
  namespace: kube-system
spec:
  selector:
    matchLabels:
      app: kubernetes-pod-chaos-monkey
  replicas: 1
  template:
    metadata:
      labels:
        app: kubernetes-pod-chaos-monkey
    spec:
      containers:
      - name: kubernetes-pod-chaos-monkey
        image: codeurjc/kubernetes-pod-chaos-monkey 
        imagePullPolicy: Always
