chaos-node-micro/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: node-micro
  namespace: default
spec:
  ports:
  - name: http
    port: 3000
    protocol: TCP
    targetPort: 3000
  selector:
    name: node-micro
  type: NodePort
